--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 		}
     </style>
 </head>
-<div style="background-color: #fff; border-style: none; border-radius: 20px; margin: 20px 0 20px;">
-		<span style="text-align:center;text-decoration: underline;"><h1>West Marches Campaign</h1></span>
+<div style="background-color: #fff; border-style: outset; border-radius: 5px; margin: 20px 0 20px;">
+		<span style="text-align:center;text-decoration: underline;"><h1>D&D Campaign Wikia</h1></span>
 		<div class="row" style="margin: 0 auto; overflow: hidden; padding: 20px;">
 			<div class="column" style="float: left; width: 33.33%;">
 				<span style="text-decoration: underline;"><strong>Character Sheets</strong></span>
@@ -25,7 +25,7 @@
 			<div class="column" style="float: left; width: 33.33%;">
 				<span style="text-decoration: underline;"><strong>Important Links</strong></span>
 				<br />
-				<a href="http://arsludi.lamemage.com/index.php/78/grand-experiments-west-marches/" target="_blank" rel="noopener">West Marches Explaination</a>
+				<a href="gameinfo/info.html">Explanation</a>
 				<br />
 				<a href="WorldMap.png" target="_blank" rel="noopener">West Marches Map</a>
 				<br />
