--- a/index.html
+++ b/index.html
@@ -13,52 +13,38 @@
 		}
     </style>
 </head>
-<div style="background-color: #fff; border-style: outset; border-radius: 5px; margin: 20px 0 20px;">
+<div style="background-image: url('cobblestone.png');"> 
+<div style="background-color: #fff; border-style: outset; border-radius: 20px; margin: 20px 0 20px;">
 		<span style="text-align:center;text-decoration: underline;"><h1>D&D Campaign Wikia</h1></span>
 		<div class="row" style="margin: 0 auto; overflow: hidden; padding: 20px;">
 			<div class="column" style="float: left; width: 33.33%;">
-				<span style="text-decoration: underline;"><strong>Character Sheets</strong></span>
-				<br />
-				&emsp; - Alive -
+
+<div class="three columns alpha">
+  Column 1
+	<span style="text-decoration: underline;"><strong>Useful Links</strong></span>
+	<br />
+	<a href="gameinfo/info.html">Explanation</a>
+	<br />
+	<a href="https://awwapp.com/b/u6byt0jdpe6wv/" target="_blank" rel="noopener">Map</a>
+	<br />
 				
-			</div>
-			<div class="column" style="float: left; width: 33.33%;">
-				<span style="text-decoration: underline;"><strong>Important Links</strong></span>
-				<br />
-				<a href="gameinfo/info.html">Explanation</a>
-				<br />
-				<a href="WorldMap.png" target="_blank" rel="noopener">West Marches Map</a>
-				<br />
-				<a href="https://homebrewery.naturalcrit.com/share/r1Wnz4l5cl" target="_blank" rel="noopener">Wilderness Survivor Guide Supplement</a>
-				<br />
-				<a href="https://top.gg/bot/279722369260453888" target="_blank" rel="noopener">Discord Dice Parser bot info</a>
-				<br /> <br />
-				<span style="text-decoration: underline;"><strong>Game Info</strong></span>
-				<br /> <a href="gameinfo\Gamerules.html">Gamerules</a> 
-				<br /> <a href="gameinfo\NewCharacters.html">New Characters</a> 
-			</div>
-		</div>
-		
-		<div class="break" style="display: table; clear:both;"><br /><br /></div>
-        
-		<div class="row" style="margin: 0 auto; overflow: hidden; padding: 20px;">
-			<div class="column" style="float: left; width: 33.33%;">
-				<span style="text-decoration: underline;"><strong>Regions</strong></span>
-				<br /> Brytengol (Unexplored)
-		
-			</div>
-			<div class="column" style="float: left; width: 33.33%;">
-				<span style="text-decoration: underline;"><strong>Major Locations</strong></span>
-				<br /> <a href="majorlocations\Thorngate.html">Wraithward</a> 
-		
-			</div>
-			<div class="column" style="float: left; width: 33.33%;">
-				<span style="text-decoration: underline;"><strong>World Info</strong></span>
-				<br />  <a href="worldinfo\Deities.html">Major Deities</a> 
-				<br />  Timeline
-			</div>
-		</div>
-    </div>
-</body>
+</div>
+
+<div class="three columns">
+  Column 2
+	<span style="text-decoration: underline;"><strong>Players</strong></span>
+	<br />
+	&emsp; - Alive -
+	<a href="[INSERT CHARACTER SHEET LINK]" target="_blank" rel="noopener">PLAYER NAME</a>
+	<br />
+	<span style="text-decoration: underline;"><strong>Adventurer's Journals</strong></span>
+	<a href="journals/EXAMPLE.html">Quest: EXAMPLE</a>
+</div>
+
+<div class="three columns">
+	<span style="text-decoration: underline;"><strong>World Info</strong></span>
+  Column 3
+	
+</div>
 
 </html>
