--- a/index.html
+++ b/index.html
@@ -13,25 +13,22 @@
 		}
     </style>
 </head>
-<div style="background-image: url('cobblestone.png');"> 
-<div style="background-color: #fff; border-style: outset; border-radius: 20px; margin: 20px 0 20px;">
+<div style=> 
+<div style="background-image: "cobblestone.png"; border-style: outset; border-radius: 20px; margin: 20px 0 20px;">
 		<span style="text-align:center;text-decoration: underline;"><h1>D&D Campaign Wikia</h1></span>
 		<div class="row" style="margin: 0 auto; overflow: hidden; padding: 20px;">
-			<div class="column" style="float: left; width: 33.33%;">
+			<div class="column" style="float": left; width: 33.33%;">
 
-<div class="three columns alpha">
-  Column 1
-	<span style="text-decoration: underline;"><strong>Useful Links</strong></span>
+<div class="column" style="float: left; width: 33.33%;">
+  	<span style="text-decoration: underline;"><strong>Useful Links</strong></span>
 	<br />
 	<a href="gameinfo/info.html">Explanation</a>
 	<br />
 	<a href="https://awwapp.com/b/u6byt0jdpe6wv/" target="_blank" rel="noopener">Map</a>
 	<br />
-				
 </div>
 
-<div class="three columns">
-  Column 2
+<div class="column" style="float: left; width: 33.33%;">
 	<span style="text-decoration: underline;"><strong>Players</strong></span>
 	<br />
 	&emsp; - Alive -
@@ -40,11 +37,9 @@
 	<span style="text-decoration: underline;"><strong>Adventurer's Journals</strong></span>
 	<a href="journals/EXAMPLE.html">Quest: EXAMPLE</a>
 </div>
-
-<div class="three columns">
+				       
+<div class="column" style="float: left; width: 33.33%;">
 	<span style="text-decoration: underline;"><strong>World Info</strong></span>
-  Column 3
-	
 </div>
-
+	</body>
 </html>
