tried to fix column spacing and body

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 		}
     </style>
 </head>
-<div style=> 
-<div style="background-image: "cobblestone.png"; border-style: outset; border-radius: 20px; margin: 20px 0 20px;">
+<div style="background-color: #fff; border-style: outset; border-radius: 20px; margin: 20px 0 20px;">
 		<span style="text-align:center;text-decoration: underline;"><h1>D&D Campaign Wikia</h1></span>
 		<div class="row" style="margin: 0 auto; overflow: hidden; padding: 20px;">
 			<div class="column" style="float": left; width: 33.33%;">
@@ -27,6 +26,7 @@
 	<a href="https://awwapp.com/b/u6byt0jdpe6wv/" target="_blank" rel="noopener">Map</a>
 	<br />
 </div>
+	<div class="break" style="display: table; clear:both;"><br /><br /></div>
 
 <div class="column" style="float: left; width: 33.33%;">
 	<span style="text-decoration: underline;"><strong>Players</strong></span>
@@ -41,5 +41,5 @@
 <div class="column" style="float: left; width: 33.33%;">
 	<span style="text-decoration: underline;"><strong>World Info</strong></span>
 </div>
-	</body>
+
 </html>
