made links more important

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </div>
 									      
 <div class="column" style="float: left; width: 33.33%;">
-  	<span style="text-decoration: underline;"><strong>Useful Links</strong></span>
+  	<span style="text-decoration: underline;"><strong>READ THESE/strong></span>
 	<br />
 	<a href="gameinfo/info.html">Explanation</a>
 	<br />
