changed bg and stuff

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>D&D Wikia</title>
     <style>
         body {
-			background-color: #660000;
+			background-image: "bg_img.jpeg";
 			margin: 0 auto;
 			padding: 0px;
 			width: 50%;
@@ -21,6 +21,7 @@
 	<span style="text-decoration: underline;"><strong>Players</strong></span>
 	<br />
 	&emsp; - Alive -
+	<br />
 	<a href="[INSERT CHARACTER SHEET LINK]" target="_blank" rel="noopener">PLAYER NAME</a>
 	<br />										
 </div>
