--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>D&D Wikia</title>
     <style>
         body {
-			background-image: "bg_img.jpeg";
+			background-image: "bg_img.jpg";
 			margin: 0 auto;
 			padding: 0px;
 			width: 50%;
