--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>D&D Wikia</title>
     <style>
         body {
-			background-image: "bg_img.jpg";
+			background-image: url("bg_img.jpg");
+			background-color: #660000;
 			margin: 0 auto;
 			padding: 0px;
 			width: 50%;
