--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 				       
 <div class="column" style="float: left; width: 33.33%;">
 	<span style="text-decoration: underline;"><strong>World Info</strong></span>
+	<a href="gameinfo/info.html">Explanation</a>
 </div>
 						 
 <div class="break" style="display: table; clear:both;"><br /><br /></div>
@@ -45,5 +46,15 @@
 		<br />
 		<a href="journals/EXAMPLE.html">Quest: EXAMPLE</a>
 </div>
+	<div class="column" style="float: left; width: 33.33%;">
+		<span style="text-decoration: underline;"><strong>Regions</strong></span>
+		<br />
+		<a href="regions/brytengol.html">Brytengol</a>
+	</div>
+	<div class="column" style="float: left; width: 33.33%;">
+		<span style="text-decoration: underline;"><strong>Locations</strong></span>
+		<br />
+		<a href="locations/wraithward.html">Wraithward</a>
+	</div>
 </body>
 </html>
