updated color & bg

--- a/info.html
+++ b/info.html
@@ -6,10 +6,12 @@
     <title>Explanation</title>
     <style>
         body {
-			background-color: #202131;
+			background-image: url("bg_img.jpg");
+			background-color: #660000;
 			margin: 0 auto;
 			padding: 0px;
 			width: 50%;
+			min-width: 750px;
 		}
     </style>
 </head>
