--- a/gameinfo/info.html
+++ b/gameinfo/info.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Explanation</title>
+    <title>Explanation - Dreigoth Wiki</title>
     <style>
         body {
 			background-image: url("bg_img.jpg");
@@ -20,10 +20,10 @@
     <div style="background-color: #fff; border-style: outset; border-radius: px; margin: 20px 0 20px;">
 		<span style="text-align:center;text-decoration: underline;"><h1>Explanation</h1></span>
 		<p style=" padding: 20px;">
-  This is a western marches style campaign. Basically what that means is instead of a huge overarcing story there's one huge overarcing <a href="gameinfo/info.html">world</a> (not to say there wont be anything like building up to bossfights or anything like that). Players will all be part of an adventurer's guild where they will go on quests all over [INSERT WORLD NAME] There'll  be a group of players and you'll decide on a quest, who's going, and when you'll be doing it together. Usually a quest is about a session long (4-6 hours) but some may take longer than that.
+  This is a western marches style campaign. Basically what that means is instead of a huge overarcing story there's one huge overarcing <a href="gameinfo/info.html">world</a> (not to say there wont be anything like building up to bossfights or anything like that). Players will all be part of an adventurer's guild where they will go on quests all over Dreigoth There'll  be a group of players and you'll decide on a quest, who's going, and when you'll be doing it together. Usually a quest is about a session long (4-6 hours) but some may take longer than that.
   <br />
   <br />
-  Your character will slowly grow and possibly even achieve their goals while exploring the many realms of [INSERT WORLD NAME HERE]. Each party of usually up to 6 players will have a notetaker. While I encourage everyone to take notes, the notetaker is responsible for writing the journal that will go into this wikia for the rest of the adventurers to see. It's pretty important that this is done. Locations and notable people will be put on the wiki as well as information about the world in general such as religion and history. For instructions on using the wiki go <a href="gameinfo/instructions.html">here</a>. 
+  Your character will slowly grow and possibly even achieve their goals while exploring the many realms of Dreigoth. Each party of usually up to 6 players will have a notetaker. While I encourage everyone to take notes, the notetaker is responsible for writing the journal that will go into this wikia for the rest of the adventurers to see. It's pretty important that this is done. Locations and notable people will be put on the wiki as well as information about the world in general such as religion and history. For instructions on using the wiki go <a href="gameinfo/instructions.html">here</a>. Be warned though, Dreigoth isn't called the DARK REALM for nothing, it's a dangerous place and adventuring is considered by lots to be just shy of suicide.
   </div>
   </body>
 </html>
