--- a/gameinfo/info.html
+++ b/gameinfo/info.html
@@ -3,6 +3,8 @@
 <html>
 
 <head>
+
+<span style="text-align:center;text-decoration: underline;"><a href="https://jdeknoblo.github.io/"><h1>The Dark Realm of Dreigoth</h1></a></span> 
     <title>Explanation - Dreigoth Wiki</title>
     <style>
         body {
