--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>D&D Wikia</title>
+    <title>Dreigoth Wiki</title>
     <style>
         body {
 			background-image: url("bg_img.jpg");
@@ -14,7 +14,7 @@
     </style>
 </head>
 <div style="background-color: #fff; border-style: outset; margin: 20px 0 20px;">
-		<span style="text-align:center;text-decoration: underline;"><h1>D&D Campaign Wikia</h1></span>
+		<span style="text-align:center;text-decoration: underline;"><h1>The Dark Realm of Dreigoth Wiki</h1></span>
 		<div class="row" style="margin: 0 auto; overflow: hidden; padding: 20px;">
 			<div class="column" style="float": left; width: 33.33%;">
 <div class="column" style="float: left; width: 33.33%;">
@@ -22,7 +22,7 @@
 	<br />
 	&emsp; - Alive -
 	<br />
-	<a href="[INSERT CHARACTER SHEET LINK]" target="_blank" rel="noopener">PLAYER NAME</a>
+	<a href="https://www.dndbeyond.com/profile/Eldund/characters/29993677" target="_blank" rel="noopener">Makanar de-Kulmyr</a>
 	<br />										
 </div>
 									      
