--- a/gameinfo/info.html
+++ b/gameinfo/info.html
@@ -8,7 +8,7 @@
     <title>Explanation - Dreigoth Wiki</title>
     <style>
         body {
-			background-image: url("bg_img.jpg");
+			background-image: url("https://jdeknoblo.github.io/bg_img.jpg");
 			background-color: #000000;
 			margin: 0 auto;
 			padding: 0px;
