--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <div class="column" style="float: left; width: 33.33%;">
 	<span style="text-decoration: underline;"><strong>World Info</strong></span>
 	<br />
-	<a href="gameinfo/info.html">Explanation</a>
+	<a href="gameinfo/dreigoth.html">Dreigoth</a>
 </div>
 						 
 <div class="break" style="display: table; clear:both;"><br /><br /></div>
