--- a/gameinfo/dreigoth.html
+++ b/gameinfo/dreigoth.html
@@ -19,7 +19,7 @@
 
 <body>
     <div style="background-color: #fff; border-style: outset; border-radius: px; margin: 20px 0 20px;">
-	<span style="text-align:center;text-decoration: underline;"><a href="https://jdeknoblo.github.io/"><h1>The Dark Realm of Dreigoth</h1></a></span> 
+	<span style="text-align:center;text-decoration: underline;"><a href="https://jdeknoblo.github.io/"><h1>The Dark Realm of Dreigoth Wiki</h1></a></span> 
 		<span style="text-align:center;text-decoration: underline;"><h1>Dreigoth</h1></span>
 		<p style=" padding: 20px;">
   	The world is known by a few things by it’s many inhabitants. The dwarves of the Dwemereth Mountains know it as Dreigoth (which is it’s basically the common name as it’s called that by most civilizations) Elves call it Zemia in both Elvish and common toungue. The world is widely accepted to be a sphere but some of the less developed societies still think it’s flat. Travelling on the ocean is usually avoided as it’s expensive and dangerouns but there’s rumors and myths of islands far from Dreigoth with strange and dangerous inhabitants. 
