--- a/gameinfo/info.html
+++ b/gameinfo/info.html
@@ -20,7 +20,7 @@
 
 <body>
     <div style="background-color: #fff; border-style: outset; border-radius: px; margin: 20px 0 20px;">
-	<span style="text-align:center;text-decoration: underline;"><a href="https://jdeknoblo.github.io/"><h1>The Dark Realm of Dreigoth</h1></a></span> 
+	<span style="text-align:center;text-decoration: underline;"><a href="https://jdeknoblo.github.io/"><h1>The Dark Realm of Dreigoth Wiki</h1></a></span> 
 		<span style="text-align:center;text-decoration: underline;"><h1>Explanation</h1></span>
 		<p style=" padding: 20px;">
   	This is a western marches style campaign. Basically what that means is instead of a huge overarcing story there's one huge overarcing <a href="gameinfo/info.html">world</a> (not to say there wont be anything like building up to bossfights or anything like that). Players will all be part of an adventurer's guild where they will go on quests all over Dreigoth There'll  be a group of players and you'll decide on a quest, who's going, and when you'll be doing it together. Usually a quest is about a session long (4-6 hours) but some may take longer than that.
