--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 	<span style="text-decoration: underline;"><strong>World Info</strong></span>
 	<br />
 	<a href="gameinfo/dreigoth.html">Dreigoth</a>
+	<br />
+	<a href="gameinfo/charcreation.html">New Characters</a>
 </div>
 						 
 <div class="break" style="display: table; clear:both;"><br /><br /></div>
