--- a/gameinfo/charcreation.html
+++ b/gameinfo/charcreation.html
@@ -21,25 +21,39 @@
 	<span style="text-align:center;text-decoration: underline;"><a href="https://jdeknoblo.github.io/"><h1>The Dark Realm of Dreigoth Wiki</h1></a></span> 
 		<span style="text-align:center;text-decoration: underline;"><h1>New Characters</h1></span>
 		<p style=" padding: 20px;">
-	Dreigoth is a dangerous place and your characters might die if you're not careful, so you should really take the time to round out your character.
-	<br />
 	This guide will show you how to engrave your character in the world of Dreigoth, and tell you how your race fits into the world.
 	<br />
 	Certain races are very uncommon in this world, so the choices of races are limited. Below is a list of races and a brief description of them in Dreigoth.
 	<br />
-			• Humans - These are the most dominant race in Dreigoth. Their mostly accepted in the civilized parts of Dreigoth. You may be apart of the <a href="gameinfo/holts.html">Holts</a> and have resided just east of <a href="locations/ererdelis.html">Ererdelis</a> with the kin of Half-Elves and High Elves. The majority of humans are part of the <a href="gameinfo/banhelm.html">Bánhelm Empire</a>. They are disliked by the Elves of Ererdelis and the Holts, but certainly coexist.
 	<br />
-			• Dwarves - The secludeded dwellers of the Dwemereth Mountains who rarely come out of their sprawling mountain fortresses besides to trade with their neighboring dwarves and seldom some humans. Both Hill Dwarves and Mountian Dwarves dislike the Dragonborn due to their history with dragons. They're respected by humans, dwarves, and halflings but have had disputes with elves in the past.
+		     • Humans - These are the most dominant race in Dreigoth. Their mostly accepted in the civilized parts of Dreigoth. You may be apart of the <a href="gameinfo/holts.html">Holts</a> and have resided just east of <a href="locations/ererdelis.html">Ererdelis</a> with the kin of Half-Elves and High Elves. Or, more likely, majority of humans are part of the <a href="gameinfo/banhelm.html">Bánhelm Empire</a>. They are disliked by the Elves of Ererdelis and the Holts, but certainly coexist.
+	<br />
+	<br />
+		     • Dwarves - The secludeded dwellers of the Dwemereth Mountains who rarely come out of their sprawling mountain fortresses besides to trade with their neighboring dwarves and seldom some humans. Both Hill Dwarves and Mountian Dwarves dislike the Dragonborn due to their history with dragons. They're respected by humans, dwarves, and halflings but have had disputes with elves in the past.
+	<br />
 	<br />		
-			• High Elves - The thriving society guarded by the trees of the Ererdelis forest. They are a happy people but have grown to dislike dwarves, humans in relation to the Bánhelm, and their brethren, the Wood Elves of Limpledof and the Drow of the Underdark. Their accepted by most races besides those that mutually dislike them. Other than that they are a prideful race that thrives in the world of magic and combat.
+		     • High Elves - The thriving society guarded by the trees of the Ererdelis forest. They are a happy people but have grown to dislike dwarves, humans in relation to the Bánhelm, and their brethren, the Wood Elves of Limpledof and the Drow of the Underdark. Their accepted by most races besides those that mutually dislike them. Other than that they are a prideful race that thrives in the world of magic and combat.
 	<br />
-			• Wood Elves - The Wood-Elves of Limpledof are also a secluded race that have a hatred towards the High Elves because of their complete control over them. They live in tribes throughout the dangerous Limpledof woods. The Wood Elves are often confused for High Elves (very offensive) and people accepting of High Elves often feel the same about Wood Elves.
+	<br />
+		     • Wood Elves - The Wood-Elves of Limpledof are also a secluded race that have a hatred towards the High Elves because of their complete control over them. They live in tribes throughout the dangerous Limpledof woods. The Wood Elves are often confused for High Elves (very offensive) and people accepting of High Elves often feel the same about Wood Elves.
+	<br />
 	<br />		
-			• Half-Elves - Half-Elves are relatively uncommon in the world of Dreigoth. They originate from the Holtic city Garbearn and are what originally started the Dúnælfen war. They aren't very accepted by many people in the Bánhelm territory of Brytengol but accepted by most other kin.
+		     • Half-Elves - Half-Elves are relatively uncommon in the world of Dreigoth. They originate from the Holtic city Garbearn and are what originally started the Dúnælfen war. They aren't very accepted by many people in the Bánhelm territory of Brytengol but accepted by most other kin.
 	<br />
-			• Halflings - Rumored to be decendents of humans seperated from them along with the Gnomes during the Flee From Drakford, the halflings, called grassfold by most, live under the loose rule of the Bánhelm Empire but the families of the Flempleden mostly take care of themselves. They live peaceful isolated lives and are pretty accepting of all outsiders but the bloodthirty fiends of Mörkskog, but they don't give them too much trouble.
 	<br />
-			• Gnomes - Gnomes are a mysterios people of a very southern side of Dreigoth. Not many people have gone past their civilization past their cities in the Gildafond woods. They have been rumored to have made huge technological advancements compared to other parts of Dreigoth in order to combat their large southern threats from Drakford. Nobody has seen much of them but travelers and traders of the Gildafond forest. 
+		     • Halflings - Rumored to be decendents of humans seperated from them along with the Gnomes during the Flee From Drakford, the halflings, called grassfold by most, live under the loose rule of the Bánhelm Empire but the families of the Flempleden mostly take care of themselves. They live peaceful isolated lives and are pretty accepting of all outsiders but the bloodthirty fiends of Mörkskog, but they don't give them too much trouble.
+	<br />
+	<br />
+		     • Gnomes - Gnomes are a mysterios people of a very southern side of Dreigoth. Not many people have gone past their civilization past their cities in the Gildafond woods. They have been rumored to have made huge technological advancements compared to other parts of Dreigoth in order to combat their large southern threats from Drakford. Nobody has seen much of them but travelers and traders of the Gildafond forest. 
+	<br />
+	<br />
+	Once you join <a href="https://ddb.ac/campaigns/join/11760431520523487"><h1>this</h1> your character should start at Level 1 with the Advancement Type set to EXP, HP set to Fixed and your Abilities Scores will be chosen with Point Buy.
+	<br />
+	<br />
+	Any alignment for your character is fine but work with me to create your backstory so I can help you build it into the world further.
+	<br />
+	<br />
+	The next step for you should be to read the <a href="gameinfo/instructions.html"><h1>tutorial for taking notes and using the wiki</h1>
   </div>
   </body>
 </html>
