a bunch of shit

--- a/gameinfo/charcreation.html
+++ b/gameinfo/charcreation.html
@@ -50,6 +50,9 @@
 	Once you join <a href="https://ddb.ac/campaigns/join/11760431520523487"><h1>this</h1> your character should start at Level 1 with the Advancement Type set to EXP, HP set to Fixed and your Abilities Scores will be chosen with Point Buy.
 	<br />
 	<br />
+	Your back story should ultimately end where you have a real reason to join the adventurer's guild and to explore, that's mostly the only requirement with maybe a few exceptions.
+	<br />
+	<br />
 	Any alignment for your character is fine but work with me to create your backstory so I can help you build it into the world further.
 	<br />
 	<br />
