--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 	<br />
 	<a href="https://awwapp.com/b/u6byt0jdpe6wv/" target="_blank" rel="noopener">Map</a>
 	<br />
+	<a href="gameinfo/charcreation.html">New Characters</a>
+	<br />
+	<a href="gameinfo/instructions.html">Instructions</a>
 </div>
 				       
 <div class="column" style="float: left; width: 33.33%;">
@@ -40,7 +43,6 @@
 	<br />
 	<a href="gameinfo/dreigoth.html">Dreigoth</a>
 	<br />
-	<a href="gameinfo/charcreation.html">New Characters</a>
 </div>
 						 
 <div class="break" style="display: table; clear:both;"><br /><br /></div>
