--- a/gameinfo/charcreation.html
+++ b/gameinfo/charcreation.html
@@ -47,16 +47,16 @@
 		     • Gnomes - Gnomes are a mysterios people of a very southern side of Dreigoth. Not many people have gone past their civilization past their cities in the Gildafond woods. They have been rumored to have made huge technological advancements compared to other parts of Dreigoth in order to combat their large southern threats from Drakford. Nobody has seen much of them but travelers and traders of the Gildafond forest. 
 	<br />
 	<br />
-	Once you join <a href="https://ddb.ac/campaigns/join/11760431520523487"><h1>this</h1> your character should start at Level 1 with the Advancement Type set to EXP, HP set to Fixed and your Abilities Scores will be chosen with Point Buy.
+	Once you join <a href="https://ddb.ac/campaigns/join/11760431520523487">this</a> your character should start at Level 1 with the Advancement Type set to EXP, HP set to Fixed and your Abilities Scores will be chosen with Point Buy.
 	<br />
-	<br />
+	<br /> 
 	Your back story should ultimately end where you have a real reason to join the adventurer's guild and to explore, that's mostly the only requirement with maybe a few exceptions.
 	<br />
 	<br />
 	Any alignment for your character is fine but work with me to create your backstory so I can help you build it into the world further.
 	<br />
 	<br />
-	The next step for you should be to read the <a href="gameinfo/instructions.html"><h1>tutorial for taking notes and using the wiki</h1>
+	The next step for you should be to read the <a href="gameinfo/instructions.html">tutorial for taking notes and using the wiki</a>
   </div>
   </body>
 </html>
