--- a/regions/brytengol.html
+++ b/regions/brytengol.html
@@ -20,7 +20,7 @@
 <body>
     <div style="background-color: #fff; border-style: outset; border-radius: px; margin: 20px 0 20px;">
 	<span style="text-align:center;text-decoration: underline;"><a href="https://jdeknoblo.github.io/"><h1>The Dark Realm of Dreigoth Wiki</h1></a></span> 
-		<span style="text-align:center;text-decoration: underline;"><h1>Dreigoth</h1></span>
+		<span style="text-align:center;text-decoration: underline;"><h1>Brytengol</h1></span>
 		<p style=" padding: 20px;">
     Brytengol is between the land of Elves to the west, the land of Dwarves to the north, Kularklok to the east, and the land of savagery to the south. The country was split between two powers long after the Flee From Drakford, The Bánhelm's with Wraitward and Beorhilm, and the Holts with Barbearn and their High Elf allies. Brytengol was in a bloody civil war started by a revolution for almost a decade. The war of Dúnælfen ended after many losses on both sides, and it's been decades since, but there's still some bad blood between Bánhelm Empire and the Holts. 
     <br />
