--- a/gameinfo/charcreation.html
+++ b/gameinfo/charcreation.html
@@ -26,16 +26,16 @@
 	Certain races are very uncommon in this world, so the choices of races are limited. Below is a list of races and a brief description of them in Dreigoth.
 	<br />
 	<br />
-		     • Humans - These are the most dominant race in Dreigoth. Their mostly accepted in the civilized parts of Dreigoth. You may be apart of the <a href="gameinfo/holts.html">Holts</a> and have resided just east of <a href="locations/ererdelis.html">Ererdelis</a> with the kin of Half-Elves and High Elves. Or, more likely, majority of humans are part of the <a href="gameinfo/banhelm.html">Bánhelm Empire</a>. They are disliked by the Elves of Ererdelis and the Holts, but certainly coexist.
+		     • Humans - These are the most dominant race in Dreigoth. Their mostly accepted in the civilized parts of the world. You may be apart of the <a href="gameinfo/holts.html">Holts</a> and have resided just east of <a href="locations/ererdelis.html">Ererdelis</a> with the kin of Half-Elves and High Elves. Or, more likely, you're of the <a href="gameinfo/banhelm.html">Bánhelm Empire</a>. They are disliked by the Elves of Ererdelis and the Holts, but they do certainly coexist.
 	<br />
 	<br />
-		     • Dwarves - The secludeded dwellers of the Dwemereth Mountains who rarely come out of their sprawling mountain fortresses besides to trade with their neighboring dwarves and seldom some humans. Both Hill Dwarves and Mountian Dwarves dislike the Dragonborn due to their history with dragons. They're respected by humans, dwarves, and halflings but have had disputes with elves in the past.
+		     • Dwarves - They are the secludeded dwellers of the Dwemereth Mountains who rarely come out of their sprawling mountain fortresses besides to trade with their neighboring dwarves and seldom some humans. Both Hill Dwarves and Mountian Dwarves dislike the Dragonborn due to their history with dragons. They're respected by humans, dwarves, and halflings but have had disputes with elves in the past.
 	<br />
 	<br />		
-		     • High Elves - The thriving society guarded by the trees of the Ererdelis forest. They are a happy people but have grown to dislike dwarves, humans in relation to the Bánhelm, and their brethren, the Wood Elves of Limpledof and the Drow of the Underdark. Their accepted by most races besides those that mutually dislike them. Other than that they are a prideful race that thrives in the world of magic and combat.
+		     • High Elves - The thriving society guarded by the trees of the Ererdelis forest. They are a happy people but have grown to dislike dwarves, humans in relation to the Bánhelm, and their brethren, the Wood Elves of Limpledof and the Drow of the Underdark (in order). Their accepted by most races besides those that mutually dislike them. Other than that they are a prideful race that thrives in the world of magic, combat and trade.
 	<br />
 	<br />
-		     • Wood Elves - The Wood-Elves of Limpledof are also a secluded race that have a hatred towards the High Elves because of their complete control over them. They live in tribes throughout the dangerous Limpledof woods. The Wood Elves are often confused for High Elves (very offensive) and people accepting of High Elves often feel the same about Wood Elves.
+		     • Wood Elves - The Wood-Elves of Limpledof are also a secluded race that have a hatred towards the High Elves because of their complete control and mistreatment of them. They live in tribes throughout the dangerous Limpledof woods. The Wood Elves are often confused for High Elves (very offensive) and people accepting of High Elves often feel the same about Wood Elves.
 	<br />
 	<br />		
 		     • Half-Elves - Half-Elves are relatively uncommon in the world of Dreigoth. They originate from the Holtic city Garbearn and are what originally started the Dúnælfen war. They aren't very accepted by many people in the Bánhelm territory of Brytengol but accepted by most other kin.
@@ -45,6 +45,12 @@
 	<br />
 	<br />
 		     • Gnomes - Gnomes are a mysterios people of a very southern side of Dreigoth. Not many people have gone past their civilization past their cities in the Gildafond woods. They have been rumored to have made huge technological advancements compared to other parts of Dreigoth in order to combat their large southern threats from Drakford. Nobody has seen much of them but travelers and traders of the Gildafond forest. 
+	<br />
+	<br />
+	Any other uncommon or rare race such as Half-Orcs, Orcs, Goblins, Kobolds, Lizardfold, Saytr, Leonin, Tabaxi, basically anything that isn't listed above, is disliked or mistrusted by the other races. I'm limiting the options untimately to make it more immersive and to establish the gritty and Dark Realm of Dreigoth.
+	<br />
+	<br />
+	If you would like to play a different race the DC for social roles is automatically raised by +5 or more. If you're playing a race that they denizens of your location are familiar with or particularly fond of, the DC is normal. If you're playing a familiar and average race the DC is lowered by 5. I can also make once exception. If you specifically wanna play a race for it's stats we can simply give you those stats as a common race. Ex: Orc stats but you're just a beefy human, or Kobold stats but you're a stupid halfling. I made a few exceptions but that's the last of those.
 	<br />
 	<br />
 	Once you join <a href="https://ddb.ac/campaigns/join/11760431520523487">this</a> your character should start at Level 1 with the Advancement Type set to EXP, HP set to Fixed and your Abilities Scores will be chosen with Point Buy.
