--- a/regions/brytengol.html
+++ b/regions/brytengol.html
@@ -22,7 +22,7 @@
 	<span style="text-align:center;text-decoration: underline;"><a href="https://jdeknoblo.github.io/"><h1>The Dark Realm of Dreigoth Wiki</h1></a></span> 
 		<span style="text-align:center;text-decoration: underline;"><h1>Brytengol</h1></span>
 		<p style=" padding: 20px;">
-    Brytengol is between the land of Elves to the west, the land of Dwarves to the north, Kularklok to the east, and the land of savagery to the south. The country was split between two powers long after the Flee From Drakford, The Bánhelm's with Wraitward and Beorhilm, and the Holts with Barbearn and their High Elf allies. Brytengol was in a bloody civil war started by a revolution for almost a decade. The war of Dúnælfen ended after many losses on both sides, and it's been decades since, but there's still some bad blood between Bánhelm Empire and the Holts. 
+    Brytengol is between the land of Elves to the west, the land of Dwarves to the north, Kularklok to the east, and the land of savagery to the south. The country was split between two powers long after the Flee From Drakford, The Bánhelm's with Wraitward and Beorhilm, and the Holts with Barbearn and their High Elf allies. Brytengol was in a bloody civil war between these two for almost a decade. The war of Dúnælfen ended after many losses on both sides, and it's been decades since, but there's still some bad blood between Bánhelm Empire and the Holts. 
     <br />
     <br />
     Brytengol is called the land of men, but it's also the home to Half-Elves, though they're mostly only welcome in Holtic territory, so their capital city is Garbearn, where they originated. The rest of Brytengol has minority populations of most races from all around Dreigoth, though many are treated poorly among the humans.
