added character sheets

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 	<br />
 	<a href="https://www.dndbeyond.com/profile/Eldund/characters/29993677" target="_blank" rel="noopener">Makanar de-Kulmyr</a>
 	<br />										
+	<a href="https://www.dndbeyond.com/profile/Sterling_Phoenix/characters/30097206" target="_blank" rel="noopener">Bedíglian unfúl</a>
+	<br />
+	<a href="https://www.dndbeyond.com/profile/TheGoatIsBetter/characters/29999639" target="_blank" rel="noopener">Negwin "Nenenu" Ne-Nutmidge</a>
+	<br />
 </div>
 									      
 <div class="column" style="float: left; width: 33.33%;">
