--- a/gameinfo/charcreation.html
+++ b/gameinfo/charcreation.html
@@ -26,7 +26,7 @@
 	Certain races are very uncommon in this world, so the choices of races are limited. Below is a list of races and a brief description of them in Dreigoth.
 	<br />
 	<br />
-		     • Humans - These are the most dominant race in Dreigoth. Their mostly accepted in the civilized parts of the world. You may be apart of the <a href="gameinfo/holts.html">Holts</a> and have resided just east of <a href="locations/ererdelis.html">Ererdelis</a> with the kin of Half-Elves and High Elves. Or, more likely, you're of the <a href="gameinfo/banhelm.html">Bánhelm Empire</a>. They are disliked by the Elves of Ererdelis and the Holts, but they do certainly coexist.
+		     • Humans - These are the most dominant race in Dreigoth. Their mostly accepted in the civilized parts of the world. You may be apart of the <a href="holts.html">Holts</a> and have resided just east of <a href="locations/ererdelis.html">Ererdelis</a> with the kin of Half-Elves and High Elves. Or, more likely, you're of the <a href="banhelm.html">Bánhelm Empire</a>. They are disliked by the Elves of Ererdelis and the Holts, but they do certainly coexist.
 	<br />
 	<br />
 		     • Dwarves - They are the secludeded dwellers of the Dwemereth Mountains who rarely come out of their sprawling mountain fortresses besides to trade with their neighboring dwarves and seldom some humans. Both Hill Dwarves and Mountian Dwarves dislike the Dragonborn due to their history with dragons. They're respected by humans, dwarves, and halflings but have had disputes with elves in the past.
