--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
 </div>
 									      
 <div class="column" style="float: left; width: 33.33%;">
-  	<span style="text-decoration: underline;"><strong>Read These</strong></span>
+  	<span style="text-decoration: underline;"><strong>Important Info</strong></span>
 	<br />
 	<a href="gameinfo/info.html">Explanation</a>
+	<br />
+	<a href="gameinfo/rules.html">Rules</a>
 	<br />
 	<a href="https://awwapp.com/b/u6byt0jdpe6wv/" target="_blank" rel="noopener">Map</a>
 	<br />
