added discord link and fixed new characters

--- a/gameinfo/charcreation.html
+++ b/gameinfo/charcreation.html
@@ -23,10 +23,10 @@
 		<p style=" padding: 20px;">
 	This guide will show you how to engrave your character in the world of Dreigoth, and tell you how your race fits into the world.
 	<br />
-	Certain races are very uncommon in this world, so the choices of races are limited. Below is a list of races and a brief description of them in Dreigoth.
+	Certain races are very uncommon in this world, so the choices are pretty limited. Below is a list of them and a brief description of the races in Dreigoth.
 	<br />
 	<br />
-		     • Humans - These are the most dominant race in Dreigoth. Their mostly accepted in the civilized parts of the world. You may be apart of the <a href="holts.html">Holts</a> and have resided just east of <a href="locations/ererdelis.html">Ererdelis</a> with the kin of Half-Elves and High Elves. Or, more likely, you're of the <a href="banhelm.html">Bánhelm Empire</a>. They are disliked by the Elves of Ererdelis and the Holts, but they do certainly coexist.
+		     • Humans - These are the most populous of the races in Dreigoth. Their mostly accepted in the civilized parts of the world. You may be apart of the <a href="holts.html">Holts</a> and have resided just east of <a href="locations/ererdelis.html">Ererdelis</a> with the kin of Half-Elves and High Elves. Or, more likely, you're of the <a href="banhelm.html">Bánhelm Empire</a>. The Elves of Ererdelis and the Holts are both unfriendly to the Bánhelms but they do certainly coexist. Dragonfolk on the other hand are despised.
 	<br />
 	<br />
 		     • Dwarves - They are the secludeded dwellers of the Dwemereth Mountains who rarely come out of their sprawling mountain fortresses besides to trade with their neighboring dwarves and seldom some humans. Both Hill Dwarves and Mountian Dwarves dislike the Dragonborn due to their history with dragons. They're respected by humans, dwarves, and halflings but have had disputes with elves in the past.
