--- a/gameinfo/dreigoth.html
+++ b/gameinfo/dreigoth.html
@@ -22,10 +22,12 @@
 	<span style="text-align:center;text-decoration: underline;"><a href="https://jdeknoblo.github.io/"><h1>The Dark Realm of Dreigoth Wiki</h1></a></span> 
 		<span style="text-align:center;text-decoration: underline;"><h1>Dreigoth</h1></span>
 		<p style=" padding: 20px;">
-  	The world is known by a few things by it’s many inhabitants. The elves of Ererdelis and Limpledof call it Zemia in both Elvish and common toungue. The dwarves of the Dwemereth Mountains, and most other civilized people, know it as Dreigoth. Dreigoth is widely accepted to be a sphere but some of the less developed societies and creatures still believe it’s flat. Travelling on the ocean is usually avoided as it’s expensive and dangerouns but there’s rumors and myths of islands far from Dreigoth with strange and dangerous inhabitants. 
-<br />
-<br />
-      Legend is that the world was created by the God of Blood, Drōnach, and the God of Light Ailduiel. Both are the complete opposite in nature and created the polarized Dreigoth. Because of this, the world can never have peace and Dreigoth is in a constant battle between good and evil, because the world was created by conflict, whether it be good or evil, or ugly or beautiful. In these trying times though, the world seems more to be filled with blood and darkness.
+		The Dark Realm of Dreigoth is an unforgiving place of danger and chaos. The secluded civilizations house cowardly denizens, fearful of the dangourous fiends that their ancestors have helped build sanctuaries from. Majority of the civilizations of the civilizations of been exiled from their homeland by powerful creatures during the Flee From Drakford, dawning the Second Age. 
+		<br />
+		<br />
+		It's Year 323 of the Second Age and even centuries after, the dark times seem to have no end in sight. Wars have been waged, and the civilized people of Dreigoth are divided and xenophobic. You will start in Wraithward of Brytengol, the land of men, in the adventurer's guild, because what Dreigoth doesn't lack is a vast world, ripe for adventure and glory.
+		<br />
+		<br />
   </div>
   </body>
 </html>
