--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 <div style="background-color: #fff; border-style: outset; margin: 20px 0 20px;">
-		<a href="https://discord.gg/9ZqE75"><span style="text-align:center;text-decoration: underline;"><h1>The Dark Realm of Dreigoth Wiki</h1></span></a>
+		<a href="https://discord.gg/9ZqE75" target="_blank" rel="noopener"><span style="text-align:center;text-decoration: underline;"><h1>The Dark Realm of Dreigoth Wiki</h1></span></a>
 		<div class="row" style="margin: 0 auto; overflow: hidden; padding: 20px;">
 			<div class="column" style="float": left; width: 33.33%;">
 <div class="column" style="float: left; width: 33.33%;">
