--- a/locations/wraithward.html
+++ b/locations/wraithward.html
@@ -22,10 +22,23 @@
 	<span style="text-align:center;text-decoration: underline;"><a href="https://jdeknoblo.github.io/"><h1>The Dark Realm of Dreigoth Wiki</h1></a></span> 
 		<span style="text-align:center;text-decoration: underline;"><h1>Wraithward</h1></span>
 		<p style=" padding: 20px;">
-		incomplete
+		Wraithward is the capital of the Bánhelm Empire and a heavily fortified city just north of the Mörkskog woods. It was established on the second year of the Second Age and was the first human settlement in Brytengol. 
     <br />
     <br />
-
-  </div>
+		</div>
+		<div style="padding: 20px; border-style: inset;">
+			<img class="wraithward" src="wraithward.jpg" alt="Wraithward" style="max-width:100%; height:auto;">
+		</div>
+		<div style="padding: 0 20px 5px; float: right;">
+			<div style="border-style: inset; border-width:1px;">
+				<img src="king.jpg" alt="King Beodill IV" style="max-width:150px; height:auto; padding: 0; margins: 0;">
+				<p>King Beodill IV</p>
+			</div>
+			<p style="padding: 0px 20px 0px;">
+			<b>King Beodill IV</b> The well respected and proud ruler of the Bánhelm Empire. Rules from a massive tower in the center of Wraithward and has complete and utter control of the empire. He's rarely seen out of his castle, and never without a entourage of guards at his side.
+			<br /><br />
+			
+		</p>
+		</div>
   </body>
 </html>
