--- a/locations/wraithward.html
+++ b/locations/wraithward.html
@@ -23,22 +23,20 @@
 		<span style="text-align:center;text-decoration: underline;"><h1>Wraithward</h1></span>
 		<p style=" padding: 20px;">
 		Wraithward is the capital of the Bánhelm Empire and a heavily fortified city just north of the Mörkskog woods. It was established on the second year of the Second Age and was the first human settlement in Brytengol. 
-    <br />
-    <br />
-			<div style="padding: 20px; border-style: inset;">
-			<img class="wraithward" src="wraithward.jpg" alt="Wraithward" style="max-width:100%; height:auto;">
-		</div>
+		</p>
 		<div style="padding: 0 20px 5px; float: right;">
-			<div style="border-style: inset; border-width:1px;">
-				<img src="king.jpg" alt="King Beodill IV" style="max-width:150px; height:auto; padding: 0; margins: 0;">
+			<div style="border-style: solid; border-width:1px;">
+				<img src="king.jpg" alt="King Beodill" style="max-width:150px; height:auto; padding: 0; margins: 0;">
 				<p>King Beodill IV</p>
 			</div>
-			<p style="padding: 0px 20px 0px;">
-			<b>King Beodill IV</b> The well respected and proud ruler of the Bánhelm Empire. Rules from a massive tower in the center of Wraithward and has complete and utter control of the empire. He's rarely seen out of his castle, and never without a entourage of guards at his side.
-			<br /><br />
+		</div>
+		<p style="padding: 0px 20px 0px;">
+			<b>King Beodill IV</b> inherited his position from his father 34 years ago. Though he has final say, the Duke allows the city of Ostenwall to be ran by a council of nobles.
 		</p>
+		<div style="padding: 20px;">
+			<img src="Ostenwall.jpg" alt="Ostenwall" style="max-width:100%; height:auto;">
 		</div>
-		</div>
+    </div>
+</body>
 
-  </body>
 </html>
