--- a/locations/wraithward.html
+++ b/locations/wraithward.html
@@ -25,16 +25,19 @@
 		Wraithward is the capital of the Bánhelm Empire and a heavily fortified city just north of the Mörkskog woods. It was established on the second year of the Second Age and was the first human settlement in Brytengol. 
 		</p>
 		<div style="padding: 0 20px 5px; float: right;">
-			<div style="border-style: solid; border-width:1px;">
+			<div style="border-style: inset; border-width:1px;">
 				<img src="king.jpg" alt="King Beodill" style="max-width:150px; height:auto; padding: 0; margins: 0;">
 				<p>King Beodill IV</p>
 			</div>
 		</div>
 		<p style="padding: 0px 20px 0px;">
-			<b>King Beodill IV</b> inherited his position from his father 34 years ago. Though he has final say, the Duke allows the city of Ostenwall to be ran by a council of nobles.
+			<b>King Beodill IV</b> The well respected and proud ruler of the Bánhelm Empire. Rules from a massive tower in the center of Wraithward and has complete and utter control of the empire. He's rarely seen out of his castle, and never without a entourage of guards at his side. 
+			<br /><br />
+			<b>Adventurer's Guild Leaders</b>
 		</p>
+		
 		<div style="padding: 20px;">
-			<img src="Ostenwall.jpg" alt="Ostenwall" style="max-width:100%; height:auto;">
+			<img src="wraithward.jpg" alt="Wraithward" style="max-width:100%; height:auto;">
 		</div>
     </div>
 </body>
