--- a/locations/wraithward.html
+++ b/locations/wraithward.html
@@ -27,14 +27,15 @@
 		<div style="padding: 0 20px 5px; float: right;">
 			<div style="border-style: inset; border-width:1px;">
 				<img src="king.jpg" alt="King Beodill" style="max-width:150px; height:auto; padding: 0; margins: 0;">
-				<p>King Beodill IV</p>
+				<p>		King Beodill IV</p>
 			</div>
 		</div>
 		<p style="padding: 0px 20px 0px;">
-			<b>King Beodill IV</b> The well respected and proud ruler of the Bánhelm Empire. Rules from a massive tower in the center of Wraithward and has complete and utter control of the empire. He's rarely seen out of his castle, and never without a entourage of guards at his side. 
+			<b>King Beodill IV</b> - The well respected and proud ruler of the Bánhelm Empire. Rules from a massive tower in the center of Wraithward and has complete and utter control of the empire. He's rarely seen out of his castle, and never without a entourage of guards at his side. 
 			<br /><br />
-			<b>Adventurer's Guild Leaders</b>
-		</p>
+			<b>Adventurer's Guild</b> - Where adventurer's gather to go on quests in Wraithward. The guild is ran by the a old dwarf named Zutthan Edemstoder. He's said to be over 300 years old but doesn't share much of his past. He has a long, badass scar going down his face and a long white beard. He wears a black helmet with matching plate and a onyx belt buckle. His partner, Roland Brooker, wears a pointy helmet over chainmail and a white surcoat with a symbol of Ezekiel. He's a tall, 30ish-year-old human with a bushy mustache and olive, wrinkled skin. The adventurer's guild is seen as a sort of joke by the town of Wraithward. People are not too fond of "adventuring" as straying far from civilization is extremely dangerous. Keeping members is also an issue because of this. But exploring is their passion and they've been keeping it up for years.
+		</p><br /><br />
+			<b></b>
 		
 		<div style="padding: 20px;">
 			<img src="wraithward.jpg" alt="Wraithward" style="max-width:100%; height:auto;">
