fixed text alignment

--- a/locations/wraithward.html
+++ b/locations/wraithward.html
@@ -27,7 +27,7 @@
 		<div style="padding: 0 20px 5px; float: right;">
 			<div style="border-style: inset; border-width:1px;">
 				<img src="king.jpg" alt="King Beodill" style="max-width:150px; height:auto; padding: 0; margins: 0;">
-				<p>		King Beodill IV</p>
+				<p style="padding: 0px 22.5px 0px">King Beodill IV</p>
 			</div>
 		</div>
 		<p style="padding: 0px 20px 0px;">
