--- a/gameinfo/charcreation.html
+++ b/gameinfo/charcreation.html
@@ -26,7 +26,7 @@
 	Certain races are very uncommon in this world, so the choices are pretty limited. Below is a list of them and a brief description of the races in Dreigoth.
 	<br />
 	<br />
-		     • Humans - These are the most populous of the races in Dreigoth. Their mostly accepted in the civilized parts of the world. You may be apart of the <a href="holts.html">Holts</a> and have resided just east of <a href="locations/ererdelis.html">Ererdelis</a> with the kin of Half-Elves and High Elves. Or, more likely, you're of the <a href="banhelm.html">Bánhelm Empire</a>. The Elves of Ererdelis and the Holts are both unfriendly to the Bánhelms but they do certainly coexist. Dragonfolk on the other hand are despised.
+		     • Humans - These are the most populous of the races in Dreigoth. Their mostly accepted in the civilized parts of the world. You may be apart of the <a href="holts.html">Holts</a> and have resided just east of <a href="https://jdeknoblo.github.io/locations/ererdelis.html">Ererdelis</a> with the kin of Half-Elves and High Elves. Or, more likely, you're of the <a href="banhelm.html">Bánhelm Empire</a>. The Elves of Ererdelis and the Holts are both unfriendly to the Bánhelms but they do certainly coexist. Dragonfolk on the other hand are despised.
 	<br />
 	<br />
 		     • Dwarves - They are the secludeded dwellers of the Dwemereth Mountains who rarely come out of their sprawling mountain fortresses besides to trade with their neighboring dwarves and seldom some humans. Both Hill Dwarves and Mountian Dwarves dislike the Dragonborn due to their history with dragons. They're respected by humans, dwarves, and halflings but have had disputes with elves in the past.
@@ -47,7 +47,7 @@
 		     • Gnomes - Gnomes are a mysterios people of a very southern side of Dreigoth. Not many people have gone past their civilization past their cities in the Gildafond woods. They have been rumored to have made huge technological advancements compared to other parts of Dreigoth in order to combat their large southern threats from Drakford. Nobody has seen much of them but travelers and traders of the Gildafond forest. 
 	<br />
 	<br />
-	Any other uncommon or rare race such as Half-Orcs, Orcs, Goblins, Kobolds, Lizardfold, Saytr, Leonin, Tabaxi, basically anything that isn't listed above, is disliked or mistrusted by the other races. I'm limiting the options untimately to make it more immersive and to establish the gritty and Dark Realm of Dreigoth.
+	Any other uncommon or rare race such as Half-Orcs, , basically anything that isn't listed above, is disliked or mistrusted by the other races. I'm limiting the options untimately to make it more immersive and to establish the gritty and Dark Realm of Dreigoth.
 	<br />
 	<br />
 	If you would like to play a different race the DC for social roles is automatically raised by +5 or more. If you're playing a race that they denizens of your location are familiar with or particularly fond of, the DC is normal. If you're playing a familiar and average race the DC is lowered by 5. I can also make once exception. If you specifically wanna play a race for it's stats we can simply give you those stats as a common race. Ex: Orc stats but you're just a beefy human, or Kobold stats but you're a stupid halfling. I made a few exceptions but that's the last of those.
