--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
 	<br />
 	<a href="gameinfo/rules.html">Rules</a>
 	<br />
-	<a href="https://awwapp.com/b/u6byt0jdpe6wv/" target="_blank" rel="noopener">Map</a>
+	<a href="gameinfo/instructions.html">Taking Notes</a>
 	<br />
 	<a href="gameinfo/charcreation.html">New Characters</a>
 	<br />
-	<a href="gameinfo/instructions.html">Instructions</a>
+	<a href="https://awwapp.com/b/u6byt0jdpe6wv/" target="_blank" rel="noopener">Map</a>
+
 </div>
 				       
 <div class="column" style="float: left; width: 33.33%;">
