--- a/gameinfo/rules.html
+++ b/gameinfo/rules.html
@@ -24,8 +24,8 @@
 		<p style=" padding: 20px;">
 		These are the rules/expectations and also my style as a GM (if you're a new player feel free ask me questions if you don't understand some things)
 		</p>
-		<p style="padding: 23px;">
-		• <b>Fudging rolls</b> - I will be rolling in front of the players majority of the time. I prefer this because while I understand fudging rolls to make the experience better, this campaign setting is supposed to be especially gritty, but this have exceptions.
+		<p style="padding: 0px 20px 0px;">
+		• <b>Fudging rolls</b> - I will be rolling in front of the players majority of the time. I prefer this because while I understand fudging rolls to make the experience better, but this campaign setting is supposed to be especially gritty.
 		<br /><br />
 		• <b>Racial stuff</b> - This doesn't mean races in D&D (I get that there's racial seggregation in-game e.g. Elves dislike dwarves, but I feel like that's a LOT different), I will not be allowing racist crap and slurs and all that for obvious reasons so I will not hesistate to kick you for that.
 		<br /><br />
@@ -37,10 +37,10 @@
 		<br /><br />
 		• <b>Disruptions</b> - Another immersion breaking thing is blurting out or talking over me. There's really nothing worse as a player or GM when someones having an epic moment and some babbling idiot yells a shitty joke.  I hate feeling like a freaking teacher so if you're putting me in that situation time and time again, I'm kicking you.
 		<br /><br />
-		• <b>Rule Disputes</b> - This can really mess up the pace of the game, so if I nobody knows the rule and it takes too long for me to find it, I'll just write down a note and check on it after the session and correct it later. I think following the rules is important but it's a game and having fun is a trillion times more important.
+		• <b>Rule Disputes</b> - This can really mess up the pace of the game, so if nobody knows the rule and it takes too long for me to find it, I'll just write down a note and check on it after the session and correct it later. I think following the rules is important but it's a game and having fun is a trillion times more important.
 		</p>
 		<p style=" padding: 20px;">
-		If you have any issues or possibly something added let me know.
+		If you have any issues or possibly want something added let me know.
 		</p>
   </div>
   </body>
