--- a/gameinfo/deities.html
+++ b/gameinfo/deities.html
@@ -24,7 +24,7 @@
 		<p style=" padding: 20px;">
 			<b>Drōnach, God of Blood<b/> - He’s the most feared and one of the most worshipped in Dreigoth. Not too much is known about him but it’s widely accepted that he and Ailduil the Goddess of Light created the world of Dreigoth. His typical worshippers are extremists and signs of his symbol (a skull surrounded by drops of blood) have been found from many creatures lurking in the Mörkskog and Slaktkrag.
 		<br /><br />
-			b>T’sias, God of Knowledge</b> - A lesser known and worshipped god, legends of devoted seekers of knowledge worship this god to find the secrets of the rare art of magic and Dreigoth’s darkest forbidden secrets.
+			<b>T’sias, God of Knowledge</b> - A lesser known and worshipped god, legends of devoted seekers of knowledge worship this god to find the secrets of the rare art of magic and Dreigoth’s darkest forbidden secrets.
 		<br /><br />
 			<b>Lothiel, Goddess of Winter</b> - Worshippers of this goddess pray to her to her to appease her and avoid her devastatingly cold winters. Devoted followers aren’t common but worshippers of other gods often pray to her.
 		<br /><br />
@@ -39,6 +39,8 @@
 			<b>Thuil, God of Agriculture</b> - Thuil is prayed to by many of the denizens of Dreigoth, but most prominently by farmers and hunters. Lots of elves are also big devotees of Thuil.
 		<br /><br />
 			<b>Ailduil, Goddess of Light</b> - The polar opposite of Drōnach, her arch nemesis, Ailduil is regarded as one of the creators of Dreigoth. Humans are the prime worshippers of her and pray to her to guide them from chaotic and evil savagery.
+		<br /><br />
+			Most of these deities are prayed to by individuals who devote to other gods for other situations (e.g. a devotee to Torgūl may pray to Cilduil in the name of romance).
 
 		</p>
   </div>
