--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 	<br />
 	<a href="gameinfo/dreigoth.html">Dreigoth</a>
 	<br />
+	<a href="gameinfo/deities.html">Deities</a>
 </div>
 						 
 <div class="break" style="display: table; clear:both;"><br /><br /></div>
