fixed deities error

--- a/gameinfo/deities.html
+++ b/gameinfo/deities.html
@@ -26,7 +26,7 @@
 		<br /><br />
 			<b>T’sias, God of Knowledge</b> - A lesser known and worshipped god, legends of devoted seekers of knowledge worship this god to find the secrets of the rare art of magic and Dreigoth’s darkest forbidden secrets.
 		<br /><br />
-			<b>Lothiel, Goddess of Winter</b> - Worshippers of this goddess pray to her to her to appease her and avoid her devastatingly cold winters. Devoted followers aren’t common but worshippers of other gods often pray to her.
+			<b>Lothiel, Goddess of Winter</b> - Worshippers of this goddess pray to her to appease her and avoid her devastatingly cold winters. Devoted followers aren’t common but worshippers of other gods often pray to her.
 		<br /><br />
 			<b>Ezekiel, God of War</b> - Ezekiel is worshipped by many and his worshippers seek vengeance, whether it be just or not. Many soldiers pray to Ezekiel and there are many stories of his brave exploits.
 		<br /><br />
