--- a/gameinfo/dreigoth.html
+++ b/gameinfo/dreigoth.html
@@ -22,7 +22,7 @@
 	<span style="text-align:center;text-decoration: underline;"><a href="https://jdeknoblo.github.io/"><h1>The Dark Realm of Dreigoth Wiki</h1></a></span> 
 		<span style="text-align:center;text-decoration: underline;"><h1>Dreigoth</h1></span>
 		<p style=" padding: 20px;">
-		The Dark Realm of Dreigoth is an unforgiving place of danger and chaos. The secluded civilizations house cowardly denizens, fearful of the dangourous fiends that their ancestors have helped build sanctuaries from. Majority of the civilizations of the civilizations of been exiled from their homeland by powerful creatures during the Flee From Drakford, dawning the Second Age. 
+		The Dark Realm of Dreigoth is an unforgiving place of danger and chaos. The secluded civilizations house cowardly denizens, fearful of the dangourous fiends that their ancestors have helped build sanctuaries from. Majority of the civilizations of been exiled from their homeland by powerful creatures during the Flee From Drakford, dawning the Second Age. 
 		<br />
 		<br />
 		It's Year 323 of the Second Age and even centuries after, the dark times seem to have no end in sight. Wars have been waged, and the civilized people of Dreigoth are divided and xenophobic. You will start in Wraithward of Brytengol, the land of men, in the adventurer's guild, because what Dreigoth doesn't lack is a vast world, ripe for adventure and glory.
