fixed broken link

--- a/gameinfo/charcreation.html
+++ b/gameinfo/charcreation.html
@@ -62,7 +62,7 @@
 	Any alignment for your character is fine but work with me to create your backstory so I can help you build it into the world further.
 	<br />
 	<br />
-	The next step for you should be to read the <a href="gameinfo/instructions.html">tutorial for taking notes and using the wiki</a>
+	The next step for you should be to read the <a href="instructions.html">tutorial for taking notes and using the wiki</a>
   </div>
   </body>
 </html>
