--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
 	<br />
 	<a href="https://www.dndbeyond.com/profile/TheGoatIsBetter/characters/29999639" target="_blank" rel="noopener">Negwin "Nenenu" Ne-Nutmidge</a>
 	<br />
+	<a href="https://www.dndbeyond.com/profile/PickleOperator/characters/30212076" target="_blank" rel ="noopener">Filvendor Zinleth</a>
+	<br />
+	<a href="https://www.dndbeyond.com/profile/PuapuSenpai/characters/30278245" target="_blank" rel ="noopener">Arwen Winderfall</a>
+	<br />
+	<a href="https://www.dndbeyond.com/profile/MashadowEnigma/characters/302686375" target="_blank" rel ="noopener">Welkin Drythbearn "Acht"</a>
 </div>
 									      
 <div class="column" style="float: left; width: 33.33%;">
