added jouirnal and fixed link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<br />
 	<a href="https://www.dndbeyond.com/profile/PuapuSenpai/characters/30278245" target="_blank" rel ="noopener">Arwen Winderfall</a>
 	<br />
-	<a href="https://www.dndbeyond.com/profile/MashadowEnigma/characters/302686375" target="_blank" rel ="noopener">Welkin Drythbearn "Acht"</a>
+	<a href="https://www.dndbeyond.com/profile/MashadowEnigma/characters/30268637" target="_blank" rel ="noopener">Welkin Drythbearn "Acht"</a>
 </div>
 									      
 <div class="column" style="float: left; width: 33.33%;">
@@ -62,7 +62,7 @@
 	<div class="column" style="float: left; width: 33.33%;">
 		<span style="text-decoration: underline;"><strong>Adventurer's Journals</strong></span>
 		<br />
-		<a href="journals/EXAMPLE.html">Quest: EXAMPLE</a>
+		<a href="journals/hilltop_halfling_hassle.html">Hilltop Halfling Hassle</a>
 </div>
 	<div class="column" style="float: left; width: 33.33%;">
 		<span style="text-decoration: underline;"><strong>Regions</strong></span>
