added horror in the halfling well

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
 		<span style="text-decoration: underline;"><strong>Adventurer's Journals</strong></span>
 		<br />
 		<a href="journals/hilltop_halfling_hassle.html">Hilltop Halfling Hassle</a>
+		<br />
+		<a href="journals/horror_in_the_halfling_well.html">Horror in the Halfling Well</a>
 </div>
 	<div class="column" style="float: left; width: 33.33%;">
 		<span style="text-decoration: underline;"><strong>Regions</strong></span>
