--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
 		<a href="journals/hilltop_halfling_hassle.html">Hilltop Halfling Hassle</a>
 		<br />
 		<a href="journals/horror_in_the_halfling_well.html">Horror in the Halfling Well</a>
+				<br />
+		<a href="journals/errlegrin_goblin_siege.html">Errlegrin Goblin Siege</a>
+				<br />
+		<a href="journals/brewing_tensions.html">Brewing Tensions</a>
 </div>
 	<div class="column" style="float: left; width: 33.33%;">
 		<span style="text-decoration: underline;"><strong>Regions</strong></span>
