--- a/journals/horror_in_the_halfling_well.html
+++ b/journals/horror_in_the_halfling_well.html
@@ -4,7 +4,7 @@
 <head>
 
 
-    <title>Journals - Dreigoth Wiki</title>
+    <title>Horror in the Halfling Well - Dreigoth Wiki</title>
     <style>
         body {
 			background-image: url("https://jdeknoblo.github.io/bg_img.jpg");
