--- a/journals/hilltop_halfling_hassle.html
+++ b/journals/hilltop_halfling_hassle.html
@@ -4,7 +4,7 @@
 <head>
 
 
-    <title>Brytengol - Dreigoth Wiki</title>
+    <title>Hilltop Halfling Hassle - Dreigoth Wiki</title>
     <style>
         body {
 			background-image: url("https://jdeknoblo.github.io/bg_img.jpg");
@@ -20,7 +20,7 @@
 <body>
     <div style="background-color: #fff; border-style: outset; border-radius: px; margin: 20px 0 20px;">
 	<span style="text-align:center;text-decoration: underline;"><a href="https://jdeknoblo.github.io/"><h1>The Dark Realm of Dreigoth Wiki</h1></a></span> 
-		<span style="text-align:center;text-decoration: underline;"><h1>Brytengol</h1></span>
+		<span style="text-align:center;text-decoration: underline;"><h1>Hilltop Halfling Hassle</h1></span>
 		<p style=" padding: 20px;">
     Adventurers: Arwen Winderfall, Bediglian Unfúl, Filvendor Zinleth
 	<br />
