--- a/gameinfo/rules.html
+++ b/gameinfo/rules.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-
+<link rel="shortcut icon" href="img/icon.ico">
 
     <title>Rules/Player Expectations - Dreigoth Wiki</title>
     <style>
