--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="shortcut icon" href="img/icon.ico">
     <title>Dreigoth Wiki</title>
     <style>
         body {
