--- a/journals/hilltop_halfling_hassle.html
+++ b/journals/hilltop_halfling_hassle.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-
+<link rel="shortcut icon" href="img/icon.ico">
 
     <title>Hilltop Halfling Hassle - Dreigoth Wiki</title>
     <style>
