--- a/journals/horror_in_the_halfling_well.html
+++ b/journals/horror_in_the_halfling_well.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-
+<link rel="shortcut icon" href="img/icon.ico">
 
     <title>Horror in the Halfling Well - Dreigoth Wiki</title>
     <style>
