--- a/gameinfo/charcreation.html
+++ b/gameinfo/charcreation.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-
+<link rel="shortcut icon" href="img/icon.ico">
 
     <title>New Characters - Dreigoth Wiki</title>
     <style>
