--- a/journals/brewing_tensions.html
+++ b/journals/brewing_tensions.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-
+<link rel="shortcut icon" href="img/icon.ico">
 
     <title>Brewing Tensions - Dreigoth Wiki</title>
     <style>
