--- a/journals/errlegrin_goblin_siege.html
+++ b/journals/errlegrin_goblin_siege.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-
+<link rel="shortcut icon" href="img/icon.ico">
 
     <title>Errlegrin Goblin Siege - Dreigoth Wiki</title>
     <style>
