--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 	<a href="https://www.dndbeyond.com/profile/PuapuSenpai/characters/30278245" target="_blank" rel ="noopener">Arwen Winderfall</a>
 	<br />
 	<a href="https://www.dndbeyond.com/profile/MashadowEnigma/characters/30268637" target="_blank" rel ="noopener">Welkin Drythbearn "Acht"</a>
+	<br />
+	<a href="https://www.dndbeyond.com/profile/Hyponix/characters/30281601" target="_blank" rel ="noopener">Vidar the Nameless</a>
+	<br />
+	<a href="https://www.dndbeyond.com/profile/BruhBattleBoy/characters/32875978" target="_blank" rel ="noopener">Grethe Doomkiller</a>
 </div>
 									      
 <div class="column" style="float: left; width: 33.33%;">
@@ -70,6 +74,10 @@
 		<a href="journals/errlegrin_goblin_siege.html">Errlegrin Goblin Siege</a>
 				<br />
 		<a href="journals/brewing_tensions.html">Brewing Tensions</a>
+		<br />
+		<a href="journals/journey_to_valtfort_and_faighulk.html">Faighulk Drench & Valtfort</a>
+		<br />
+		<a href="journals/journey_to_valtfort_and_faighulk.html">Faighulk Drench & Valtfort</a>
 </div>
 	<div class="column" style="float: left; width: 33.33%;">
 		<span style="text-decoration: underline;"><strong>Regions</strong></span>
@@ -80,6 +88,10 @@
 		<span style="text-decoration: underline;"><strong>Locations</strong></span>
 		<br />
 		<a href="locations/wraithward.html">Wraithward</a>
+		<br />
+		<a href="locations/valtfort.html">valtfort</a>
+				<br />
+		<a href="locations/faighulk_drench.html">Faighulk Drench</a>
 	</div>
 </body>
 </html>
